# MPP_2026

./: .gitignore  main.cpp
cpu/zncc_c/src/: CMakeLists.txt  getAverage.c  getStandardDeviation.c  occlusion_filling.cpp
hello_world/src/: hello_world.cpp
phase_2/mat_mul_c/: makefile
phase_2/mat_mul_c/src/: main.cpp  mat_mul.c  mat_mul.h
phase_2/mat_mul_openCL/: makefile
phase_2/mat_mul_openCL/src/: main.cpp  mat_mul.c  mat_mul.cl  mat_mul.h
phase_2_sam/: exercise1  exercise2  mat_mul  mat_mul_c  matrix_multiplication.c  matrix_multiplication_opencl.c  p2_ex_1.c  p2_ex_2.c
phase_2_sam/exercise_3/: image_opencl  kernels.cl  main.cpp
phase_3/zncc_c/: makefile
phase_3/zncc_c/src/: imageManipulation.cpp  imageManipulation.h  main.cpp  zncc.cpp  zncc.h
phase_4/zncc_threads/: makefile  zncc_threads.sln  zncc_threads.vcxproj  zncc_threads.vcxproj.filters
phase_4/zncc_threads/src/: cross_checking.cpp  cross_checking.h  getAverage.h  getAverage.h.gch  getStandardDeviation.h  getStandardDeviation.h.gch  imageManipulation.cpp  imageManipulation.h  imageManipulation.h.gch  main.cpp  occlusion_filling.cpp  occlusion_filling.h  zncc.h.gch  zncc_integral.cpp  zncc_integral.h
phase_5/opencl/: makefile  opencl.sln  opencl.vcxproj  opencl.vcxproj.filters
phase_5/opencl/src/: cross_checking.cpp  imageManipulation.cpp  kernel_cpu.cl  kernel_cross_check.cl  kernel_fast.cl  kernel_global.cl  kernel_local.cl  kernel_occlusion_fill.cl  kernel_resize.cl  kernels.cl  main.cpp  makefile
phase_6/opencl/: makefile
phase_6/opencl/src/: kernel_cpu.cl  kernels.cl  main.cpp
(+6 files in other folders)
